--- a/src/components/Console/Console.module.scss
+++ b/src/components/Console/Console.module.scss
@@ -3,7 +3,6 @@
 .container {
   background-color: #1a1a1a;
   display: grid;
-  align-items: flex-end;
   position: relative;
   height: 100%;
   padding: 24px;
@@ -18,14 +17,15 @@
 }
 
 .input {
+  align-self: flex-end;
   display: flex;
   align-items: center;
   grid-column-gap: 8px;
+  padding-top: 12px;
 
   span {
-    color: white;
     font-size: 24px;
-
+    font-weight: bolder;
   }
 
   input {
@@ -35,8 +35,10 @@
 }
 
 .body {
+  scroll-behavior: smooth;
   width: 100%;
-  height: 100%;
+  max-height: 100%;
+  overflow: auto;
   display: grid;
   align-content: flex-start;
   grid-row-gap: 4px;
@@ -46,6 +48,7 @@
 }
 
 .message {
-  color: #05d505;
-
+  font-size: 18px;
+  color: black;
+  word-break: break-word;
 }
