--- a/src/components/Input/Input.module.scss
+++ b/src/components/Input/Input.module.scss
@@ -4,9 +4,8 @@
   display: block;
   border: none;
   width: 100%;
-  background-color: #1a1a1a;
-  color: white;
   font-size: 18px;
+  background: none;
 }
 
 .wrapper {
