--- a/src/components/InputWithSuggestions/InputWithSuggestions.module.scss
+++ b/src/components/InputWithSuggestions/InputWithSuggestions.module.scss
@@ -23,6 +23,7 @@
   border-radius: 4px;
   z-index: 100;
   margin-bottom: 5px;
+  animation: .3s showSuggestions both;
 }
 
 .suggestionItem {
@@ -33,9 +34,22 @@
 }
 
 .suggestionItemHovered {
-  background: rgba(255, 255, 255, 1);
+  background-color: rgba(255, 255, 255, 1);
+  transition: .3s background-color;
 }
 
 .suggestionItemSelected {
   font-weight: bold;
+}
+
+@keyframes showSuggestions {
+  from {
+    opacity: 0;
+    bottom: 90%;
+  }
+
+  to {
+    opacity: 1;
+    bottom: 100%;
+  }
 }
