--- a/src/styles/_globals.scss
+++ b/src/styles/_globals.scss
@@ -8,7 +8,6 @@
 body {
   background-image: url("../assets/background.jpg");
   margin: 0;
-  padding: 24px;
   height: 100vh;
 }
 
@@ -18,4 +17,9 @@ body {
 
 button {
   cursor: pointer;
+}
+
+a {
+  text-decoration: none;
+  color: rgba(0, 0, 0, 0.54);
 }
